--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/HomePage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/HomePage.html
@@ -1,11 +1,27 @@
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" >
     <head>
-        <title>Happy Lab Management Tool</title>
+		<link rel="stylesheet" type="text/css" href="css/happylab.css" media="all" />
+	    <title>Happy Lab Management Tool</title>
+	    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
     </head>
     <body>
-        <h1>Happy Lab Management Tool </h1>
-        <br/><br/>
-        <span wicket:id="message">message will be here</span>
+    <div id="wrapper">
+    <div id="headerbar">
+	   <div id="logo"><a href="http://www.happylab.at"><img src="img/happylab-logo.png" alt=""></a></div>
+	   <div id="mainmenu">    
+        <ul><li>Happy Lab Management Tool</li></ul>
+       </div>
+    </div>
+    <br/>        
+    <h1><span wicket:id="message">message will be here</span></h1>
+    <form wicket:id="main" >
+    Überprüfe, ob folgende Keycard Zutritt hat:  <input wicket:id="inputRfid" />  <input wicket:id="updateLink" type="submit" value="Update"/>
+    <a href="#" wicket:id="checkAccess">more information</a> <br/>
+    (derzeit hat nur rfid "admin" zugang)
+	</form>
+	
+	</div>        
+        
     </body>
 </html>
 
