Alle Umlaute und "ß" im HTML Code ersetzt z.B. Ä in &Auml;

--- a/html-dummy/Mitglied-OffeneBuchungen.html
+++ b/html-dummy/Mitglied-OffeneBuchungen.html
@@ -68,7 +68,7 @@ $(document).ready(function(){
 	<td style="text-align:right;">0,45 &euro;</td>
 	<td style="text-align:right;">105</td>
 	<td style="text-align:right;">47,25 &euro;</td>
-	<td> <a href="...">Details...</a> | <a href="...">löschen</a></td>
+	<td> <a href="...">Details...</a> | <a href="...">l&ouml;schen</a></td>
 </tr>
 <tr>
 	<td> <input type="checkbox"> </td>
@@ -77,7 +77,7 @@ $(document).ready(function(){
 	<td style="text-align:right;">10,00 &euro;</td>
 	<td style="text-align:right;">1,5</td>
 	<td style="text-align:right;">15,00 &euro;</td>
-	<td> <a href="...">Details...</a> | <a href="...">löschen</a></td>
+	<td> <a href="...">Details...</a> | <a href="...">l&ouml;schen</a></td>
 </tr>
 <tr>
 	<td> <input type="checkbox"> </td>
@@ -86,7 +86,7 @@ $(document).ready(function(){
 	<td style="text-align:right;">20 &euro;</td>
 	<td style="text-align:right;">1</td>
 	<td style="text-align:right;">20,00 &euro;</td>
-	<td> <a href="...">Details...</a> | <a href="...">löschen</a></td>
+	<td> <a href="...">Details...</a> | <a href="...">l&ouml;schen</a></td>
 </tr>
 <tr>
 	<td></td>
@@ -96,7 +96,7 @@ $(document).ready(function(){
 </tr>
 </table>
 <br />
-<button class="minimal">Buchung hinzufügen</button>
+<button class="minimal">Buchung hinzuf&uuml;gen</button>
 
 <h2>Neue Rechnung erstellen</h2>
 
@@ -105,7 +105,7 @@ $(document).ready(function(){
 <fieldset class="columnar">
 	<legend>Rechnungsdaten</legend>
 	<div class="type-text">
-		<label for="">Empfänger</label>
+		<label for="">Empf&auml;nger</label>
 		<input type="text" size="50" name="txtCompany">
 	</div>
 	<div class="type-text">
@@ -117,7 +117,7 @@ $(document).ready(function(){
 		<input type="text" size="50" name="txtCompany">
 	</div>
 	<div class="type-text">
-		<label for="">Fällig am</label>
+		<label for="">F&auml;llig am</label>
 		<input type="text" size="50" name="txtCompany">
 	</div>
 	<div class="type-select">
