--- a/html-dummy/Mitglied-Zusatzpakete.html
+++ b/html-dummy/Mitglied-Zusatzpakete.html
@@ -62,7 +62,7 @@
 	<td>Mitgliedsbeitrag (Non-Profit)</td>
 	<td>01.01.2011</td>
 	<td style="text-align:right;">36 &euro;</td>
-	<td>jährlich</td>
+	<td>j&auml;hrlich</td>
 	<td>31.12.2011</td>
 	<td></td>
 	<td><a href="...">Details...</a> | <a href="...">Storno...</a></td>
@@ -78,7 +78,7 @@
 </tr>
 </table>
 <br/>
-<button class="minimal">Zusatzpaket hinzufügen</button>	
+<button class="minimal">Zusatzpaket hinzuf&uuml;gen</button>	
 	
 </div>
 
