--- a/html-dummy/Mitglied-add.html
+++ b/html-dummy/Mitglied-add.html
@@ -54,7 +54,7 @@ $(document).ready(function(){
 
 <div style="padding: 10px;">
 
-<h1>Neues Mitglied hinzufügen</h1>
+<h1>Neues Mitglied hinzuf&uuml;gen</h1>
 
 <form action="parse-form.php" method="POST" class="yform" style="width:500px">
 
@@ -78,7 +78,7 @@ $(document).ready(function(){
 	</div>
 	<div class="type-select">
 		<label for="">Geschlecht</label>
-		<select name="txtPersonSex"><option>weiblich</option><option>männich</option></select>
+		<select name="txtPersonSex"><option>weiblich</option><option>m&auml;nnich</option></select>
 	</div>
 	<div class="type-text">
 		<label for="">Geburtsdatum</label>
@@ -136,7 +136,7 @@ $(document).ready(function(){
 	</div>
 	<div class="type-select">
 		<label for="">Geschlecht</label>
-		<select name="txtPersonSex"><option>weiblich</option><option>männich</option></select>
+		<select name="txtPersonSex"><option>weiblich</option><option>m&auml;nnich</option></select>
 	</div>
 	<div class="type-text">
 		<label for="">Geburtsdatum</label>
@@ -162,7 +162,7 @@ $(document).ready(function(){
 	<div class="type-select">
 		<label for="">Art der Mitgliedschaft</label>
 		<select name="txtPayment">
-			<option>außerordentlich</option>
+			<option>au&szlig;erordentlich</option>
 			<option>ordentlich</option>
 			<option>Ehrenmitglied</option>
 		</select>
@@ -199,7 +199,7 @@ $(document).ready(function(){
 	<div>
 </fieldset>
 
-<input type="submit" value="Hinzufügen" class="minimal">
+<input type="submit" value="Hinzuf&uuml;gen" class="minimal">
 
 
 </form>
