--- a/html-dummy/Mitgliederliste.html
+++ b/html-dummy/Mitgliederliste.html
@@ -78,7 +78,7 @@
 	<td> <a href="...">Stammdaten</a> | <a href="...">Zusatzpakete</a> | <a href="...">Buchungen</a> | <a href="...">Rechnung</a></td>
 </tr>
 </table>
-4 Datensätze 
+4 Datens&auml;tze 
 	
 <div>
 <button onclick="location.href='Mitglied-add.html';" class="minimal">Neues Mitglied</button>
