--- a/html-dummy/Mitglied-Rechnungen.html
+++ b/html-dummy/Mitglied-Rechnungen.html
@@ -56,14 +56,14 @@ Filter: von <input type="text" size="8" name="txtCompany"> bis <input type="text
 	<td>03.08.2011</td>
 	<td style="text-align:right;">23,00 &euro;</td>
 	<td>bezahlt</td>
-	<td> <a href="...">Details...</a> | <a href="...">Status ändern</a></td>
+	<td> <a href="...">Details...</a> | <a href="...">Status &auml;ndern</a></td>
 </tr>
 <tr>
 	<td>1176</td>
 	<td>06.09.2011</td>
 	<td style="text-align:right;">147,12 &euro;</td>
 	<td>offen</td>
-	<td> <a href="...">Details...</a> | <a href="...">Status ändern</a></td>
+	<td> <a href="...">Details...</a> | <a href="...">Status &auml;ndern</a></td>
 </tr>
 
 
