Beispiel mit Tabelle

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/HomePage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/HomePage.html
@@ -15,7 +15,7 @@
     <br/>        
     <h1><span wicket:id="message">message will be here</span></h1>
     <form wicket:id="main" >
-    Überprüfe, ob folgende Keycard Zutritt hat:  <input wicket:id="inputRfid" />  <input wicket:id="updateLink" type="submit" value="Update"/>
+	&Uuml;berpr&uuml;fe, ob folgende Keycard Zutritt hat:  <input wicket:id="inputRfid" />  <input wicket:id="updateLink" type="submit" value="Update"/>
     <a href="#" wicket:id="checkAccess">more information</a> <br/>
     (derzeit hat nur rfid "admin" zugang)
 	</form>
