--- a/html-dummy/Mitglied-add.html
+++ b/html-dummy/Mitglied-add.html
@@ -54,7 +54,7 @@ $(document).ready(function(){
 
 <div style="padding: 10px;">
 
-<h1>Neues Mitglied hinzuf&uuml;gen</h1>
+<h1>Neues Mitglied hinzufügen</h1>
 
 <form action="parse-form.php" method="POST" class="yform" style="width:500px">
 
