--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/MitgliederPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/MitgliederPage.html
@@ -3,8 +3,9 @@
 
 <h1 wicket:id="mitgliederLabel">overwrite this</h1>
 
+<form wicket:id="main">
 
-<div style="">
+<div>
 	<div style="float:left;">
 		Anzeige: 
 		<input type="checkbox" name="chkPreRegistrations"> Vorameldungen
@@ -59,8 +60,8 @@
 4 Datens&auml;tze 
 	
 <div>
-<button onclick="" class="minimal">Neues Mitglied</button>
+<button wicket:id="newMember" class="minimal">Neues Mitglied</button>
 </div>	
-	
+</form>	
 </div>
 </wicket:extend>
