jquery importiert und anderen css folder erzeugt, konnte css anders nicht einbinden. eine mitglieder-hinzufüge page ersteltt und das hinzufügen zur datenbank von usern begonnen; 4 felder gehen schon.

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/BasePage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/BasePage.html
@@ -4,25 +4,12 @@
 <title>Fab Lab - BasePage</title>
 <link wicket:id="stylesheetMain"/>
 <link wicket:id="stylesheetForm"/>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
 </head>
 
 <body>
 
-<!--<span wicket:id="topNavPanel"></span>-->
-
-<div id="menubar">
-	<div style="float:left;">
-	<ul id="mainmenu">
-		<li class="selected"><a wicket:id="mitgliederLink" href="">Mitglieder</a></li>
-		<li><a wicket:id="rechnungenLink" href="">Rechnungen</a></li>
-		<li><a wicket:id="stammdatenLink" href="">Stammdaten</a></li>
-	</ul>
-	</div>
-	
-	<div style="float:right;">
-	Karim Jafarmadar
-	</div>
-</div>
+<span wicket:id="topNavPanel">x</span>
 
 <wicket:child/>
 
