--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/MitgliederPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/MitgliederPage.html
@@ -15,6 +15,7 @@
 		Filter: <input type="text" name="">
 	</div>
 </div>
+<br>
 <table width="100%">
 <tr>
 	<th>Nr</th>
@@ -60,7 +61,8 @@
 4 Datens&auml;tze 
 	
 <div>
-<button wicket:id="newMember" class="minimal">Neues Mitglied</button>
+<!-- <button wicket:id="newMember" class="minimal">Neues Mitglied</button> -->
+<button wicket:id="mitgliedAddLink" class="minimal">Neues Mitglied</button>
 </div>	
 </form>	
 </div>
