--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/StammdatenPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/StammdatenPage.html
@@ -1,3 +1,7 @@
 <wicket:extend>
 <h1 wicket:id="stammdatenLabel">overwrite this</h1>
+
+<a wicket:id="packageList">Pakete</a>
+<a wicket:id="newPackage">neues Paket</a>
+
 </wicket:extend>
