--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/TopNavPanel.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/TopNavPanel.html
@@ -30,7 +30,7 @@ $(document).ready(function(){
 <div id="menubar">
 	<div style="float:left;">
 	<ul id="mainmenu">
-		<li class="selected"><a wicket:id="mitgliederLink" href="">Mitglieder</a></li>
+		<li><a wicket:id="mitgliederLink" href="">Mitglieder</a></li>
 		<li><a wicket:id="rechnungenLink" href="">Rechnungen</a></li>
 		<li><a wicket:id="stammdatenLink" href="">Stammdaten</a></li>
 	</ul>
