--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/MitgliedDatenPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/MitgliedDatenPage.html
@@ -24,7 +24,7 @@
 	</div>
 	<div class="type-select">
 		<label for="">Geschlecht</label>
-		<select name="txtPersonSex"><option>weiblich</option><option>m&auml;nnich</option></select>
+		<select wicket:id="gender" name="txtPersonSex"><option>weiblich</option><option>m&auml;nnich</option></select>
 	</div>
 	<div class="type-text">
 		<label for="">Geburtsdatum</label>
