--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/MitgliedDatenPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/MitgliedDatenPage.html
@@ -38,12 +38,27 @@
 		<label for="">Telefon</label>
 		<input wicket:id="mobile" type="text" size="50" name="txtPersonPhone">
 	</div>
-	<div class="type-text">
-		<label for="">Adresse</label>
-		<textarea name="txtPersonAddress" cols="50" rows="4"></textarea>
-	</div>
+<!-- 	<div class="type-text"> -->
+<!-- 		<label for="">Adresse</label> -->
+<!-- 		<textarea name="txtPersonAddress" cols="50" rows="4"></textarea> -->
+<!-- 	</div> -->
 </fieldset>
 
+<fieldset id="fldNonProfit" class="columnar">
+	<legend>Adresse</legend>
+	<div class="type-text">
+		<label for="">Straﬂe/Hausnummer</label>
+		<input wicket:id="Address.street" type="text" size="50" name="txtPersonBirthday">
+	</div>
+	<div class="type-text">
+		<label for="">Ort</label>
+		<input wicket:id="Address.city" type="text" size="50" name="txtPersonEmail">
+	</div>
+	<div class="type-text">
+		<label for="">Postleitzahl</label>
+		<input wicket:id="Address.zipCode" type="text" size="50" name="txtPersonPhone">
+	</div>
+</fieldset>
 	
 <fieldset class="columnar fldBusiness">
 	<legend>Business</legend>
@@ -107,7 +122,7 @@
 	<legend>Allgemeine Daten</legend>
 	<div class="type-select">
 		<label for="">Art der Mitgliedschaft</label>
-		<select name="txtPayment">
+		<select wicket:id="type" name="txtPayment">
 			<option>au&szlig;erordentlich</option>
 			<option>ordentlich</option>
 			<option>Ehrenmitglied</option>
@@ -119,7 +134,7 @@
 	</div>
 	<div class="type-select">
 		<label for="">Default Zahlungsart</label>
-		<select name="txtPayment" id="txtPayment">
+		<select wicket:id="paymentMethod" name="txtPayment" id="txtPayment">
 			<option value="Lastschrift">Lastschrift</option>
 			<option value="bar">Bar</option>
 			<option value="Rechnung">Rechnung</option>
