--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/MitgliederPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/MitgliederPage.html
@@ -26,7 +26,7 @@
 			<br>
 
 			<div>
-				<button wicket:id="mitgliedAddLink" class="minimal">Neues Mitglied</button>
+				<button wicket:id="addPrivateMember" class="minimal">Neues Privates Mitglied</button>
 			</div>
 		</form>
 	</div>
