added bookmarkable navigation for MitgliederDaten, but I think we better switch to a tabbed page

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/MitgliedDatenPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/MitgliedDatenPage.html
@@ -7,7 +7,7 @@
 	<legend>Art der Mitgliedschaft</legend>
 	<div class="type-select">
 		<label for="optMemberType">Art der Mitgliedschaft</label>
-		<input type="radio" name="optMemberType" value="Non-Profit" class="membertype" checked="checked">Non-Profit <input type="radio" name="optMemberType" value="Business"  class="membertype"> Business
+		<input type="radio" name="optMemberType" value="Non-Profit" class="membertype" checked="checked">Non-Profit</input> <input type="radio" name="optMemberType" value="Business"  class="membertype"> Business</input>
 	</div>
 </fieldset>	
 
@@ -165,7 +165,7 @@
 	</div>
 </fieldset>
 
-<input wicket:id="submit" type="submit" value="Hinzuf&uuml;gen" class="minimal">
+<input wicket:id="submit" type="submit" value="Speichern" class="minimal">
 
 
 </form>
