--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/MitgliederPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/MitgliederPage.html
@@ -26,7 +26,8 @@
 			<br>
 
 			<div>
-				<button wicket:id="mitgliedAddLink" class="minimal">Neues Privates Mitglied</button>
+				<button wicket:id="addPrivateMembershipLink" class="minimal">Neues Privates Mitglied</button>
+				<button wicket:id="addBusinessMembershipLink" class="minimal">Neues Business Mitglied</button>
 			</div>
 		</form>
 	</div>
