moved membership related files to new package, started to implement membership details as tabbed page

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/MitgliedDetailPage$DatenPanel.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/MitgliedDetailPage$DatenPanel.html
@@ -1,4 +1,4 @@
-<wicket:extend>
+<wicket:panel>
 <div style="padding: 10px;">
 <span wicket:id="feedback"></span>
 <form wicket:id="form" action="" method="POST" class="yform" style="width:500px">
@@ -139,4 +139,4 @@
 
 </form>
 </div>
-</wicket:extend>
+</wicket:panel>
