membership pages are now tabbed panels and have their own package

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/InvoicePanel.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/InvoicePanel.html
@@ -1,4 +1,5 @@
-<wicket:extend>
+<html>
+<wicket:panel>
 <div style="padding: 10px;">
 Filter: von <input type="text" size="8" name="txtCompany"> bis <input type="text" size="8" name="txtCompany"> <br>
 
@@ -32,4 +33,5 @@ Filter: von <input type="text" size="8" name="txtCompany"> bis <input type="text
 
 	
 </div>
-</wicket:extend>
+</wicket:panel>
+</html>
