--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/ConsumationPanel.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/ConsumationPanel.html
@@ -1,4 +1,5 @@
-<wicket:extend>
+<html>
+<wicket:panel>
 <div style="padding: 10px;">
 <table border="1">
 <tr>
@@ -109,4 +110,5 @@
 
 	
 </div>
-</wicket:extend>
+</wicket:panel>
+</html>
