--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/DataPanel.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/DataPanel.html
@@ -1,6 +1,7 @@
+<html>
 <wicket:panel>
 <div style="padding: 10px;">
-<span wicket:id="feedback"></span>
+<span id="feedback"></span>
 <form wicket:id="form" action="" method="POST" class="yform" style="width:500px">
 <!--parse-form.php-->
 <!-- 
@@ -140,3 +141,4 @@
 </form>
 </div>
 </wicket:panel>
+</html>
