--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/SubscriptionPanel.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/SubscriptionPanel.html
@@ -1,4 +1,5 @@
-<wicket:extend>
+<html>
+<wicket:panel>
 <div style="padding: 10px;">
 <div style="">
 	<div style="float:left;">
@@ -40,4 +41,5 @@
 <br/>
 <button class="minimal">Zusatzpaket hinzuf&uuml;gen</button>
 </div>
-</wicket:extend>
+</wicket:panel>
+</html>
