--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/MitgliedDatenPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/MitgliedDatenPage.html
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <wicket:extend>
 <div style="padding: 10px;">
 <span wicket:id="feedback"></span>
@@ -47,7 +48,7 @@
 <fieldset id="fldNonProfit" class="columnar">
 	<legend>Adresse</legend>
 	<div class="type-text">
-		<label for="">Straße/Hausnummer</label>
+		<label for="">StraÃŸe/Hausnummer</label>
 		<input wicket:id="Address.street" type="text" size="50" name="txtPersonBirthday">
 	</div>
 	<div class="type-text">
