--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/PackageList.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/PackageList.html
@@ -1,27 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <wicket:extend>
 
 <h1>Pakete</h1>
 
 
-<table border="0">
-<tr>
-	<th>Paket</th>
-	<th>angemeldet seit</th>
-	<th>Preis</th>
-	<th>Zahlungsperiode</th>
-	<th>bezahlt bis</th>
-	<th>Stornodatum</th>
-	<th>Aktionen</th>
-</tr>
-<tr wicket:id="packageList">
-	<td><span wicket:id="label">label</span></td>
-	<td></td>
-	<td></td>
-	<td></td>
-	<td></td>
-	<td></td>
-	<td><a wicket:id="editPackage">edit</a></td>
-</tr>
-</table>
+<table wicket:id="packageTable" border="0"></table>
 
 </wicket:extend>
