--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/DataPanel.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/DataPanel.html
@@ -53,7 +53,7 @@
 	</div>
 	<div class="type-select">
 		<label for="">Geschlecht</label>
-		<select wicket:id="gender" name="txtPersonSex"><option>weiblich</option><option>m&auml;nnich</option></select>
+		<select wicket:id="gender" name="txtPersonSex"></select>
 	</div>
 	<div class="type-text">
 		<label for="">Geburtsdatum</label>
