--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/SubscriptionPanel.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/SubscriptionPanel.html
@@ -1,45 +1,25 @@
 <html>
 <wicket:panel>
-<div style="padding: 10px;">
-<div style="">
-	<div style="float:left;">
-		Anzeige: 
-		<input type="checkbox" name="chkPreRegistrations"> stornierte Packete
-	</div>
-</div>
-<br style="clear:both;"/>
+	<div style="padding: 10px;">
+		<div style="">
+			<div style="float: left;">
+				Anzeige: <input type="checkbox" name="chkPreRegistrations">
+				stornierte Packete
+			</div>
+		</div>
+		<br style="clear: both;" />
+		
+		
+		<form wicket:id="main">
 
-<table border="0">
-<tr>
-	<th>Paket</th>
-	<th>angemeldet seit</th>
-	<th>Preis</th>
-	<th>Zahlungsperiode</th>
-	<th>bezahlt bis</th>
-	<th>Stornodatum</th>
-	<th>Aktionen</th>
-</tr>
-<tr>
-	<td>Mitgliedsbeitrag (Non-Profit)</td>
-	<td>01.01.2011</td>
-	<td style="text-align:right;">36 &euro;</td>
-	<td>j&auml;hrlich</td>
-	<td>31.12.2011</td>
-	<td></td>
-	<td><a href="...">Details...</a> | <a href="...">Storno...</a></td>
-</tr>
-<tr>
-	<td>Ad Infinitum</td>
-	<td>17.03.2011</td>
-	<td style="text-align:right;">19 €</td>
-	<td>monatlich</td>
-	<td>30.11.2011</td>
-	<td></td>
-	<td><a href="...">Details...</a> | <a href="...">Storno...</a></td>
-</tr>
-</table>
-<br/>
-<button class="minimal">Zusatzpaket hinzuf&uuml;gen</button>
-</div>
+			<div>
+				<table wicket:id="subscriptionsTable"></table>
+			</div>
+
+			<br> <span wicket:id="subscriptionsCount"></span> <br> <br>
+			
+			<input wicket:id="addSubscription" type="submit" value="Zusatzpaket buchen" class="minimal">
+		</form>
+	</div>
 </wicket:panel>
 </html>
