Ein paar Fehler behoben. Bei Packages können jetzt alle Eigenschaften festgelegt werden. Das Kündigen gehört noch mal überarbeitet.

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/DataPanel.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/DataPanel.html
@@ -77,7 +77,7 @@
 <fieldset id="fldNonProfit" class="columnar">
 	<legend>Adresse</legend>
 	<div class="type-text">
-		<label for="">Straße/Hausnummer</label>
+		<label for="">Stra&szlig;e/Hausnummer</label>
 		<input wicket:id="Address.street" type="text" size="50" name="txtPersonBirthday">
 	</div>
 	<div class="type-text">
@@ -94,7 +94,7 @@
 	<legend>Allgemeine Daten</legend>
 	<div class="type-select">
 		<label for="">Art der Mitgliedschaft</label>
-		<select wicket:id="type" name="txtPayment">
+		<select wicket:id="type" name="txtMembershipType">
 			<option>au&szlig;erordentlich</option>
 			<option>ordentlich</option>
 			<option>Ehrenmitglied</option>
@@ -106,7 +106,7 @@
 	</div>
 	<div class="type-select">
 		<label for="">Default Zahlungsart</label>
-		<select wicket:id="paymentMethod" name="txtPayment" id="txtPayment">
+		<select wicket:id="paymentMethod" name="txtPaymentMethod" id="txtPaymentMethod">
 			<option value="Lastschrift">Lastschrift</option>
 			<option value="bar">Bar</option>
 			<option value="Rechnung">Rechnung</option>
