--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/InvoicePanel.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/InvoicePanel.html
@@ -3,34 +3,14 @@
 <div style="padding: 10px;">
 Filter: von <input type="text" size="8" name="txtCompany"> bis <input type="text" size="8" name="txtCompany"> <br>
 
-<table border="1">
-<tr>
-	<th>Nr</th>
-	<th>Datum</th>
-	<th>Betrag</th>
-	<th>Status</th>
-	<th>Aktionen</th>
-</tr>
+<form wicket:id="main">
+	<div>
+		<table wicket:id="invTable"></table>
+	</div>
 
-<tr>
-	<td>1143</td>
-	<td>03.08.2011</td>
-	<td style="text-align:right;">23,00 &euro;</td>
-	<td>bezahlt</td>
-	<td> <a href="...">Details...</a> | <a href="...">Status &auml;ndern</a></td>
-</tr>
-<tr>
-	<td>1176</td>
-	<td>06.09.2011</td>
-	<td style="text-align:right;">147,12 &euro;</td>
-	<td>offen</td>
-	<td> <a href="...">Details...</a> | <a href="...">Status &auml;ndern</a></td>
-</tr>
-
-
-
-</table>
-
+	<br> <span wicket:id="invCount"></span> <br>
+	<br>
+</form>
 	
 </div>
 </wicket:panel>
