Subscriptions änderbar. Preis von Subscription ändert sich bei Auswahl von Paket. Link in StammdatenPage.java zu Keycards und Zugangszeiten.

--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/PackageAddPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/PackageAddPage.html
@@ -7,7 +7,7 @@
 			style="width: 500px">
 
 			<fieldset id="fldNonProfit" class="columnar">
-				<legend>Non-Profit</legend>
+				<legend>Details</legend>
 				<div class="type-text">
 					<label for="name">Name</label>
 					<input wicket:id="name" type="text" />
