--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/PackageList.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/PackageList.html
@@ -6,4 +6,8 @@
 
 <table wicket:id="packageTable" border="0"></table>
 
+<br> <span wicket:id="packageCount"></span> <br> <br>
+
+<input wicket:id="addPackage" type="button" value="neues Paket" class="minimal">
+
 </wicket:extend>
