--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/StammdatenPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/StammdatenPage.html
@@ -2,7 +2,8 @@
 <wicket:extend>
 <h1 wicket:id="stammdatenLabel">overwrite this</h1>
 
-<a wicket:id="packageList">Pakete</a>
-<a wicket:id="newPackage">neues Paket</a>
+<a wicket:id="PackageLink">Pakete</a><br>
+<a wicket:id="KeycardLink">Keycards</a><br>
+<a wicket:id="AccessGrantLink">Zugangszeiten</a><br>
 
 </wicket:extend>
