--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/SubscriptionDetailPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/SubscriptionDetailPage.html
@@ -25,7 +25,7 @@
 				</wicket:container>
 
 				<div class="type-text">
-					<label for="">Preis</label> <input wicket:id="PriceOverruled"
+					<label for="">Preis</label> <input wicket:id="priceOverruled"
 						type="text">
 				</div>
 
@@ -37,8 +37,8 @@
 
 			</fieldset>
 
-			<input wicket:id="submit" type="submit" value="Speichern"
-				class="minimal">
+			<input wicket:id="submit" type="submit" value="Speichern" class="minimal">
+			<button wicket:id="cancelCancelation" class="minimal">K&uuml;ndigung abbrechen</button>
 		</form>
 	</div>
 
