--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/MembershipListPage.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/web/membership/MembershipListPage.html
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd" >
+
 <wicket:extend>
 	<div style="padding: 10px;">
 
@@ -8,28 +10,30 @@
 
 			<div>
 				<div style="float: left;">
-					Anzeige: <input type="checkbox" name="chkPreRegistrations">
-					Vorameldungen <input type="checkbox" name="chkPostRegistrations">
+					Anzeige: <input type="checkbox" name="chkPreRegistrations"/>
+					Vorameldungen <input type="checkbox" name="chkPostRegistrations"/>
 					ausgetretene Mitglieder
 				</div>
 				<div style="float: right;">
-					Filter: <input type="text" name="">
+					Filter: <input type="text" name=""/>
 				</div>
 			</div>
-			<br>
-			<br>
+			<br/>
+			<br/>
 
 			<div>
 				<table wicket:id="mitgliederTabelle"></table>
 			</div>
 
-			<br> <span wicket:id="mitgliederAnzahl"></span> <br>
-			<br>
+			<br/> <span wicket:id="mitgliederAnzahl"></span> <br/>
+         <div>
+            <button wicket:id="addPrivateMembershipLink" class="minimal">Neues Mitglied</button>
+            <!-- 
+            <button wicket:id="addBusinessMembershipLink" class="minimal">Neues Business Mitglied</button>
+            -->            
+         </div>
 
-			<div>
-				<button wicket:id="addPrivateMembershipLink" class="minimal">Neues Privates Mitglied</button>
-				<button wicket:id="addBusinessMembershipLink" class="minimal">Neues Business Mitglied</button>
-			</div>
 		</form>
 	</div>
 </wicket:extend>
+</html>
