--- a/fablabman/src/main/webapp/pages/at/happylab/fablabtool/TopNavPanel.html
+++ b/fablabman/src/main/webapp/pages/at/happylab/fablabtool/TopNavPanel.html
@@ -3,18 +3,6 @@
 <!-- Ein- und Ausblenden von Formfelder -->
 <script type="text/javascript">
 $(document).ready(function(){
-    $(".fldBusiness").css("display","none");
-    //$("#fldNonProfit").css("display","none");
-        
-	$(".membertype").click(function(){
-		if ($('input[name=optMemberType]:checked').val() == "Non-Profit" ) {
-			$("#fldNonProfit").slideDown("fast"); //Slide Down Effect
-			$(".fldBusiness").slideUp("fast");
-		} else {
-			$("#fldNonProfit").slideUp("fast");  //Slide Up Effect
-			$(".fldBusiness").slideDown("fast");
-		}
-	 });
 	 
 	$("#txtPayment").change(function(){
 		if($(this).val() == "Lastschrift") {
@@ -34,10 +22,12 @@ $(document).ready(function(){
 		<li><a wicket:id="mitgliederLink" href="">Mitglieder</a></li>
 		<li><a wicket:id="rechnungenLink" href="">Rechnungen</a></li>
 		<li><a wicket:id="stammdatenLink" href="">Stammdaten</a></li>
+      		
 	</ul>
 	</div>
 	
 	<div style="float:right;">
+	<wicket:link><a href="/at/happylab/fablabtool/web/authentication/FablabSignOutPage.html">Abmelden: </a></wicket:link>
 	Karim Jafarmadar
 	</div>
 </div>
